# purchasing-weekly

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  loader.py  localization.py  main.py  processor.py  styler.py
src/legacy/: procurement_processor_updated copy.ipynb
