[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-purchasing"
version = "0.1.0"
description = "Weekly purchasing data processor"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "xlsxwriter"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
weekly-purchasing = "app.main:main"